--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GRACE WANJIKU KIBOI | Web Developer</title>
-   <button onclick="toggleDarkMode()" class="hover:text-pink-600 dark:hover:text-pink-300">
-  <i class="fas fa-moon"></i>
-</button>
-
-
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer>
       // Toggle mobile menu
@@ -34,7 +29,7 @@
       }
     </style>
   </head>
-  <body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-white transition-all duration-300">
+ <body class="bg-pink-50 text-gray-800">
 
 
     <!-- NAV -->
@@ -186,15 +181,8 @@
     <footer class="text-center text-sm py-6 text-gray-500 bg-white border-t border-pink-100">
       &copy; 2025 GRACE WANJIKU KIBOI. All rights reserved.
     </footer>
-  <script>
-  function toggleDarkMode() {
-    document.documentElement.classList.toggle("dark");
-  }
-</script>
-
-
-
-  </body>
+    </body>
 </html>
+
 
 
